Some packaging. Version 0.2.2.

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -4,7 +4,7 @@ build-backend = "hatchling.build"
 
 [project]
 name = "yr_meteogram_util"
-version = "0.2.1"
+version = "0.2.2"
 authors = [
   { name="Andreas Gunnerås", email="andreas@gunneras.se" },
 ]
@@ -16,6 +16,8 @@ classifiers = [
     "License :: OSI Approved :: MIT License",
     "Operating System :: OS Independent",
 ]
+license = "MIT"
+license-files = ["LICEN[CS]E*"]
 dependencies = ["aiohttp>=3.10"]
 
 [project.urls]
