--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,10 +1,10 @@
 [build-system]
-requires = ["hatchling"]
+requires = ["hatchling >= 1.27"]
 build-backend = "hatchling.build"
 
 [project]
 name = "yr_meteogram_util"
-version = "0.2.4"
+version = "0.2.5"
 authors = [
   { name="Andreas Gunnerås", email="andreas@gunneras.se" },
 ]
@@ -13,10 +13,10 @@ readme = "README.md"
 requires-python = ">=3.10"
 classifiers = [
     "Programming Language :: Python :: 3",
-    "License :: OSI Approved :: MIT License",
     "Operating System :: OS Independent",
 ]
-license = { text = "MIT" }
+license = "MIT"
+license-files = ["LICENSE.txt"]
 dependencies = ["aiohttp>=3.10"]
 
 [project.urls]
